assets/css/style.css
  body{
    height: 100%;
    font-family: 'Fira Sans', sans-serif;
}
.main-text
{
    position: absolute;
    display: inline-block;
    top: 150px;
    width: 96.66666666666666%;
    color: #FFF;
    
}

#famous-trails{
  color:#fff;
}


/* navbar styling */
  #top-nav {
    background: #313131;
    /* position: fixed;  */
    width: 100%;
    z-index:10 ; 
}

  a {
    color: #fff !important;
}

  a:hover {
    color: green !important;

}

  #logo {
    color: #fff;
}

/* jumbotron styling */
  .jumbotron {
    position: relative;
    background:linear-gradient(rgba(0, 0, 0, 0.185), rgba(0, 0, 0, 0.144)), url("../images/nicolas-cool-_Ojb8Te7tyI-unsplash.jpg") top center;
    background-size: cover;
    padding-top: 10em;
    padding-bottom:22em; 
    border-radius: 0 !important;
    
}
#trail, #weather {
  overflow: scroll;
}



  .card-body {
    background: #313131 !important;
    color:#fff;
}

  #zip-code{
    margin-left: 5px;
}
  p{
    color: #fff;
}
  img{
    width: 500px;
}

  

  .imagClass{
    width: 70%;
    height:50%;
} 
/* yotube video (responsive) */
  .iframe-container{
    position: relative;
    width: 100%;
    padding-bottom: 56.25%; 
    height: 0;
  }
  .iframe-container iframe{
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  #description{
    display: none;
  }


  #head-container{
      margin-top: 50px;
      text-align: center;
  }

  #video-container{
      width: 100%;
      margin-top: 50px;
  }

  .col-sm-6{
      margin-bottom: 10px;
  }

  #head-container{
      margin-top: 50px;
      text-align: center;
  }

  #video-container{
      width: 100%;
      margin-top: 50px;
  }

  .col-sm-6{
      margin-bottom: 10px;
  }


  #btn-pad-left{
    scroll-padding-right: 0;
  }


/* buttons */
  #zip-btn{
      background-color: #fd6031;
      padding-left: 20px;
      padding-right: 20px;
  }

  #hide{
    text-align: center;
    margin-left:50px;
    background-color: #fd6031;
    color: black;
    border: none;
  }
  #close-btn{
    text-align: center;
    background-color: #F8F8F8;
    color:#fd6031;
    border: none;
  }
  #hike{
    border: none;
  }

  .main-para{
      text-align: left;
      font-size: 20px;
  }

  .weather{
      top: 7px
  }

  .my-4{
      text-align: center;
  }

  .other {
      text-align: center;
  }

  #other{
      text-align: center;
      margin-bottom: 7px;
  }

  footer {
    text-align: center;
}
  #cont-video {
    text-align: center;
}

/* #openweathermap-widget-12{
  position: -webkit-sticky;
  position: sticky;
  bottom: 1rem;
} */

#widget{
  position: absolute;
  margin-top: 10px;
  margin-left: 10px;
  z-index: 30;


}
/* .mainwid{
  position: absolute;
  margin-top: 10px;
  margin-left: 10px;
  z-index: 30;


} */

.stickThat{
  position: fixed;
  top: 100px;  
  z-index: 10000;
}

@media only screen and (max-width: 1440px) {
#widget{
  display: none;  

}
}
@media only screen and (max-width: 1024px) {
  .main-text
  {
      position: absolute;
      top: 80px;
    
  }
  }


@media only screen and (max-width: 600px) {
  .main-text{
   top: 75px;
}

.trail-pics{
  height: 100px;
  width: 175px;
}

  .main-para{
    display: none;  
  }
 #zip-c{
   display: none;
 }
 .form-inline{
   display: block;
 }
 #zip-btn{
   margin-top: 10px;
 }
 #description{
   display: block;
   z-index: 30;
   background: #fff !important;
   color: black !important;
 }

 /* #description .card-body {
   background: #fff !important;
   border: none !important;
 }
 #description .card-text {
  color: black;
 } */
 #widget{
  /* position: static;
  margin-top: 90px;
  margin-bottom: 50px;
  margin-left: 50px;
  
  z-index:100; */
  display: none;

}

.stickThat{
  position: static;
  top: 60px;
  
  z-index: 10;
}

}

 @media only screen and (max-width: 375px){
#logo{
  display: inline;
}
  .main-text
  {
      position: static;
      top: 10px;
    
  }
  #description{
    display: block;
  }
  #widget{
    position: static;
    /* margin-top: 90px;
    margin-bottom: 50px;
    margin-left: 100px; */
    margin: 0 auto;
    float: none;
    z-index: inherit 0;;
  
  }

  
  .stickThat{
    position: static;
    top: 60px;
    
    z-index: 10;
  }

} 

